using PlayHouse.Connector.Protocol;
using PlayHouse.TestServer.Proto;
using Xunit;

namespace PlayHouse.Connector.IntegrationTests.AdvancedTests;

/// <summary>
/// A-06: Edge Case í…ŒìŠ¤íŠ¸
/// </summary>
/// <remarks>
/// ê²½ê³„ ì¡°ê±´, ë¹„ì •ìƒ ì…ë ¥, Config ê²€ì¦ ë“± ì—£ì§€ ì¼€ì´ìŠ¤ í…ŒìŠ¤íŠ¸.
/// </remarks>
[Trait("Category", "Advanced")]
[Trait("Feature", "EdgeCases")]
public class A06_EdgeCaseTests : IClassFixture<TestServerFixture>, IAsyncLifetime
{
    private readonly TestServerFixture _testServer;
    private Connector? _connector;
    private CreateStageResponse? _stageInfo;

    public A06_EdgeCaseTests(TestServerFixture testServer)
    {
        _testServer = testServer;
    }

    public async Task InitializeAsync()
    {
        _stageInfo = await _testServer.CreateTestStageAsync();
    }

    public async Task DisposeAsync()
    {
        if (_connector != null)
        {
            if (_connector.IsConnected())
            {
                _connector.Disconnect();
                await Task.Delay(100);
            }
            await _connector.DisposeAsync();
            _connector = null;
        }
    }

    private void CreateConnectorWithConfig(ConnectorConfig config)
    {
        _connector = new Connector();
        _connector.Init(config);
    }

    [Fact(DisplayName = "A-06-01: Init ì—†ì´ Connect ì‹œ ì˜ˆì™¸ê°€ ë°œìƒí•œë‹¤")]
    public async Task Connect_Without_Init_Throws()
    {
        // Arrange
        _connector = new Connector();
        // Initì„ í˜¸ì¶œí•˜ì§€ ì•ŠìŒ

        // Act & Assert
        await Assert.ThrowsAsync<NullReferenceException>(async () =>
        {
            await _connector.ConnectAsync(
                _testServer.Host,
                _testServer.TcpPort,
                _stageInfo!.StageId,
                _stageInfo.StageType
            );
        });
    }

    [Fact(DisplayName = "A-06-02: null Configë¡œ Init ì‹œ ì˜ˆì™¸ê°€ ë°œìƒí•œë‹¤")]
    public void Init_With_Null_Config_Throws()
    {
        // Arrange
        _connector = new Connector();

        // Act & Assert
        Assert.Throws<ArgumentNullException>(() => _connector.Init(null!));
    }

    [Fact(DisplayName = "A-06-03: ê¸°ë³¸ Config ê°’ì´ ì˜¬ë°”ë¥´ê²Œ ì„¤ì •ëœë‹¤")]
    public void Default_Config_Values()
    {
        // Arrange
        var config = new ConnectorConfig();

        // Assert
        Assert.False(config.UseWebsocket);
        Assert.False(config.UseSsl);
        Assert.Equal("/ws", config.WebSocketPath);
        Assert.Equal(30000, config.ConnectionIdleTimeoutMs);
        Assert.Equal(10000, config.HeartBeatIntervalMs);
        Assert.Equal(30000, config.HeartbeatTimeoutMs);
        Assert.Equal(30000, config.RequestTimeoutMs);
        Assert.False(config.EnableLoggingResponseTime);
        Assert.False(config.TurnOnTrace);
    }

    [Fact(DisplayName = "A-06-04: ì§§ì€ íƒ€ì„ì•„ì›ƒ ì„¤ì •ì´ ì ìš©ëœë‹¤")]
    public async Task Short_Timeout_Config_Applied()
    {
        // Arrange
        CreateConnectorWithConfig(new ConnectorConfig
        {
            RequestTimeoutMs = 100,  // ë§¤ìš° ì§§ì€ íƒ€ì„ì•„ì›ƒ
            HeartBeatIntervalMs = 10000
        });

        await _connector!.ConnectAsync(
            _testServer.Host,
            _testServer.TcpPort,
            _stageInfo!.StageId,
            _stageInfo.StageType
        );

        var authRequest = new AuthenticateRequest { UserId = "timeout-user", Token = "valid_token" };
        using var authPacket = new Packet(authRequest);
        await _connector.AuthenticateAsync(authPacket);

        // NoResponseRequestëŠ” ì‘ë‹µí•˜ì§€ ì•Šìœ¼ë¯€ë¡œ íƒ€ì„ì•„ì›ƒ ë°œìƒ
        var noResponseRequest = new NoResponseRequest { DelayMs = 1000 };

        // Act & Assert
        using var packet = new Packet(noResponseRequest);
        await Assert.ThrowsAsync<ConnectorException>(async () =>
        {
            await _connector.RequestAsync(packet);
        });
    }

    [Fact(DisplayName = "A-06-05: ì˜ëª»ëœ í˜¸ìŠ¤íŠ¸ë¡œ ì—°ê²° ì‹œ ì‹¤íŒ¨í•œë‹¤")]
    public async Task Connect_To_Invalid_Host_Fails()
    {
        // Arrange
        CreateConnectorWithConfig(new ConnectorConfig
        {
            RequestTimeoutMs = 3000,
            HeartBeatIntervalMs = 10000
        });

        // Act
        var connected = await _connector!.ConnectAsync(
            "invalid.host.that.does.not.exist.local",
            _testServer.TcpPort,
            _stageInfo!.StageId,
            _stageInfo.StageType
        );

        // Assert
        Assert.False(connected);
        Assert.False(_connector.IsConnected());
    }

    [Fact(DisplayName = "A-06-06: ì˜ëª»ëœ í¬íŠ¸ë¡œ ì—°ê²° ì‹œ ì‹¤íŒ¨í•œë‹¤")]
    public async Task Connect_To_Invalid_Port_Fails()
    {
        // Arrange
        CreateConnectorWithConfig(new ConnectorConfig
        {
            RequestTimeoutMs = 3000,
            HeartBeatIntervalMs = 10000
        });

        // Act
        var connected = await _connector!.ConnectAsync(
            _testServer.Host,
            59999,  // ì‚¬ìš©í•˜ì§€ ì•ŠëŠ” í¬íŠ¸
            _stageInfo!.StageId,
            _stageInfo.StageType
        );

        // Assert
        Assert.False(connected);
        Assert.False(_connector.IsConnected());
    }

    [Fact(DisplayName = "A-06-07: ë¹ˆ MsgId íŒ¨í‚·ë„ ì²˜ë¦¬ëœë‹¤")]
    public async Task Empty_MsgId_Packet_Handled()
    {
        // Arrange
        CreateConnectorWithConfig(new ConnectorConfig
        {
            RequestTimeoutMs = 5000,
            HeartBeatIntervalMs = 10000
        });

        await _connector!.ConnectAsync(
            _testServer.Host,
            _testServer.TcpPort,
            _stageInfo!.StageId,
            _stageInfo.StageType
        );

        var authRequest = new AuthenticateRequest { UserId = "empty-msgid-user", Token = "valid_token" };
        using var authPacket = new Packet(authRequest);
        await _connector.AuthenticateAsync(authPacket);

        // Act - ë¹ˆ MsgIdë¡œ íŒ¨í‚· ìƒì„± ì‹œë„
        // Packet.Empty ì‚¬ìš©
        using var emptyPacket = Packet.Empty("UnknownMessage");
        var response = await _connector.RequestAsync(emptyPacket);

        // Assert - ì„œë²„ê°€ ì•Œ ìˆ˜ ì—†ëŠ” ë©”ì‹œì§€ì— ëŒ€í•´ ê¸°ë³¸ ì‘ë‹µ
        Assert.NotNull(response);
    }

    [Fact(DisplayName = "A-06-08: ë™ì¼ Connectorë¡œ ì—¬ëŸ¬ ë²ˆ Disconnect í˜¸ì¶œì´ ì•ˆì „í•˜ë‹¤")]
    public async Task Multiple_Disconnect_Calls_Safe()
    {
        // Arrange
        CreateConnectorWithConfig(new ConnectorConfig
        {
            RequestTimeoutMs = 5000,
            HeartBeatIntervalMs = 10000
        });

        await _connector!.ConnectAsync(
            _testServer.Host,
            _testServer.TcpPort,
            _stageInfo!.StageId,
            _stageInfo.StageType
        );

        // Act - ì—¬ëŸ¬ ë²ˆ Disconnect
        _connector.Disconnect();
        _connector.Disconnect();
        _connector.Disconnect();

        await Task.Delay(500);

        // Assert
        Assert.False(_connector.IsConnected());
    }

    [Fact(DisplayName = "A-06-09: DisposeAsync í›„ ì—°ê²° ì‹œë„ ì‹œ ì˜ˆì™¸ê°€ ë°œìƒí•œë‹¤")]
    public async Task Connect_After_Dispose_Throws()
    {
        // Arrange
        CreateConnectorWithConfig(new ConnectorConfig
        {
            RequestTimeoutMs = 5000,
            HeartBeatIntervalMs = 10000
        });

        await _connector!.DisposeAsync();

        // Act & Assert
        await Assert.ThrowsAsync<NullReferenceException>(async () =>
        {
            await _connector.ConnectAsync(
                _testServer.Host,
                _testServer.TcpPort,
                _stageInfo!.StageId,
                _stageInfo.StageType
            );
        });

        _connector = null;  // DisposeAsyncì—ì„œ ë‹¤ì‹œ ì²˜ë¦¬í•˜ì§€ ì•Šë„ë¡
    }

    [Fact(DisplayName = "A-06-10: ì—°ê²° ì¤‘ DisposeAsyncê°€ ì•ˆì „í•˜ê²Œ ì²˜ë¦¬ëœë‹¤")]
    public async Task DisposeAsync_While_Connected()
    {
        // Arrange
        CreateConnectorWithConfig(new ConnectorConfig
        {
            RequestTimeoutMs = 5000,
            HeartBeatIntervalMs = 10000
        });

        await _connector!.ConnectAsync(
            _testServer.Host,
            _testServer.TcpPort,
            _stageInfo!.StageId,
            _stageInfo.StageType
        );

        Assert.True(_connector.IsConnected());

        // Act
        await _connector.DisposeAsync();

        // Assert - DisposeAsync í›„ì—ëŠ” ì—°ê²° ìƒíƒœ í™•ì¸ ë¶ˆê°€ (null)
        _connector = null;  // DisposeAsyncì—ì„œ ë‹¤ì‹œ ì²˜ë¦¬í•˜ì§€ ì•Šë„ë¡
    }

    [Fact(DisplayName = "A-06-11: StageIdì™€ StageTypeì´ Connectorì— ì €ì¥ëœë‹¤")]
    public async Task StageId_And_StageType_Stored()
    {
        // Arrange
        CreateConnectorWithConfig(new ConnectorConfig
        {
            RequestTimeoutMs = 5000,
            HeartBeatIntervalMs = 10000
        });

        // Act
        await _connector!.ConnectAsync(
            _testServer.Host,
            _testServer.TcpPort,
            _stageInfo!.StageId,
            _stageInfo.StageType
        );

        // Assert
        Assert.Equal(_stageInfo.StageId, _connector.StageId);
        Assert.Equal(_stageInfo.StageType, _connector.StageType);
    }

    [Fact(DisplayName = "A-06-12: ë§¤ìš° ê¸´ ë¬¸ìì—´ë„ ì—ì½”í•  ìˆ˜ ìˆë‹¤")]
    public async Task Very_Long_String_Echo()
    {
        // Arrange
        CreateConnectorWithConfig(new ConnectorConfig
        {
            RequestTimeoutMs = 30000,
            HeartBeatIntervalMs = 10000
        });

        await _connector!.ConnectAsync(
            _testServer.Host,
            _testServer.TcpPort,
            _stageInfo!.StageId,
            _stageInfo.StageType
        );

        var authRequest = new AuthenticateRequest { UserId = "long-string-user", Token = "valid_token" };
        using var authPacket = new Packet(authRequest);
        await _connector.AuthenticateAsync(authPacket);

        // 64KB ë¬¸ìì—´
        var longContent = new string('X', 65536);
        var echoRequest = new EchoRequest { Content = longContent, Sequence = 1 };

        // Act
        using var packet = new Packet(echoRequest);
        var response = await _connector.RequestAsync(packet);
        var reply = EchoReply.Parser.ParseFrom(response.Payload.DataSpan.ToArray());

        // Assert
        Assert.Equal(longContent, reply.Content);
    }

    [Fact(DisplayName = "A-06-13: íŠ¹ìˆ˜ë¬¸ìê°€ í¬í•¨ëœ ë¬¸ìì—´ë„ ì—ì½”í•  ìˆ˜ ìˆë‹¤")]
    public async Task Special_Characters_Echo()
    {
        // Arrange
        CreateConnectorWithConfig(new ConnectorConfig
        {
            RequestTimeoutMs = 5000,
            HeartBeatIntervalMs = 10000
        });

        await _connector!.ConnectAsync(
            _testServer.Host,
            _testServer.TcpPort,
            _stageInfo!.StageId,
            _stageInfo.StageType
        );

        var authRequest = new AuthenticateRequest { UserId = "special-char-user", Token = "valid_token" };
        using var authPacket = new Packet(authRequest);
        await _connector.AuthenticateAsync(authPacket);

        var specialContent = "Hello\0World\n\r\t\"'\\<>&í•œê¸€æ—¥æœ¬èªğŸ®";
        var echoRequest = new EchoRequest { Content = specialContent, Sequence = 1 };

        // Act
        using var packet = new Packet(echoRequest);
        var response = await _connector.RequestAsync(packet);
        var reply = EchoReply.Parser.ParseFrom(response.Payload.DataSpan.ToArray());

        // Assert
        Assert.Equal(specialContent, reply.Content);
    }
}
